- Changed .smidgeos to imgs. Updated animations to go with that. - Set minimum and initial viewport for mobile to avoid white space on the right. - Added mobile media query.

--- a/smidgeo.css
+++ b/smidgeo.css
@@ -17,11 +17,11 @@ ul {
 .smidgeo {
   height: 628px;
   width: 640px;
-  background-image: url('images/smidgeo_on_the_move.png');
-  background-repeat: no-repeat;
-  background-position: 1600px -628px;
+  left: 1600px;
+  top: -628px;
   opacity: 0.9;
-  position: absolute;
+  position: relative;
+  z-index: 2;
 }
 
 .in-spotlight .smidgeo {
@@ -29,26 +29,31 @@ ul {
   animation-duration: 3s;
   -webkit-animation-name: slidein-from-right;
   animation-name: slidein-from-right;
-  background-position: 0px 0px;
+  left: 0px;
+  top: 0px;
 }
 
 @-webkit-keyframes slidein-from-right {
   from {
-    background-position: 1600px -628px;
+    left: 1600px;
+    top: -628px;
   }
 
   to {
-    background-position: 0px 0px;
+    left: 0px;
+    top: 0px;
   }
 }
 
 @keyframes slidein-from-right {
   from {
-    background-position: 1600px -628px;
+    left: 1600px;
+    top: -628px;
   }
 
   to {
-    background-position: 0px 0px;
+    left: 0px;
+    top: 0px;
   }
 }
 
@@ -57,27 +62,39 @@ ul {
   font-size: 150px;
   color: #fff;
   padding-left: 0.5em;
-  padding-top: 2em;
-  padding-bottom: 1em;
-  background-color: hsla(200, 0%, 36%, 1.0);
+  padding-top: 0.25em;
+  padding-bottom: 0.5em;
+  z-index: 1;
+  background-color: hsla(200, 0%, 36%, 1);
   -webkit-transition: background-color 1s;
   transition: background-color 1s;
 }
 
 .get-one.in-spotlight {
-  background-color: hsla(200, 80%, 25%, 0.5);
+  background-color: hsla(200, 80%, 25%, 1);
   -webkit-transition: background-color 3s;
   transition: background-color 3s;
 }
 
 .get-two.in-spotlight {
-  background-color: hsla(340, 80%, 25%, 0.5);
+  background-color: hsla(340, 80%, 25%, 1);
   -webkit-transition: background-color 3s;
   transition: background-color 3s;
 }
 
 .get-three.in-spotlight {
-  background-color: hsla(100, 80%, 25%, 0.5);
+  background-color: hsla(100, 80%, 25%, 1);
   -webkit-transition: background-color 3s;
   transition: background-color 3s;
+}
+
+@media all and (max-width: 480px) {
+  .get {
+    font-size: 75px;
+  }
+
+  .smidgeo {
+    height: 314px;
+    width: 320px;
+  }
 }
